--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,42 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Home work 11</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+    />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <!-- <load ="partials/header.html" /> -->
 
-    <section>
+    <!-- <section>
       <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+       Path to images as from index.html file -->
+    <!-- <img src="./img/javascript.svg" alt="" />
+    </section>  -->
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <!-- <load ="partials/vite-promo.html" /> -->
+    <form class="form-to-search">
+      <input
+        class="form-input"
+        type="text"
+        name="input-text"
+        placeholder="Search images..."
+      />
+      <button class="button-submit" type="submit">Search</button>
+    </form>
+    <div class="loader"></div>
+    <div>
+      <ul class="gallery" id="image-list"></ul>
+    </div>
     <script type="module" src="./main.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.1.0/simplelightbox.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.1.0/simple-lightbox.min.js"></script>
   </body>
 </html>
