--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home work 11</title>
+    <title>Home work 12</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
@@ -34,6 +34,9 @@
     <div class="loader"></div>
     <div>
       <ul class="gallery" id="image-list"></ul>
+    </div>
+    <div class="more-container">
+      <button class="button-more is-hiden" type="button">Load more</button>
     </div>
     <script type="module" src="./main.js"></script>
     <link
