second version vithout scroll

--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,14 @@
       />
       <button class="button-submit" type="submit">Search</button>
     </form>
-    <div class="loader"></div>
+
     <div>
       <ul class="gallery" id="image-list"></ul>
     </div>
     <div class="more-container">
-      <button class="button-more is-hiden" type="button">Load more</button>
+      <button class="button-more is-hidden" type="button">Load more</button>
     </div>
+    <div class="loader"></div>
     <script type="module" src="./main.js"></script>
     <link
       rel="stylesheet"
